--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>ex-math-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ex-math-data</name>
 	<description>A project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
