--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 				<version>1.18.12</version>
 				<scope>provided</scope>
 		</dependency>
+		<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>2.0.1.Final</version>
+		</dependency>
 		<!-- <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
