ログファイルへの出力を実装

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
     url: jdbc:postgresql://localhost:5432/mercari
     username: postgres
     password: postgres
+
+logging:
+  file:
+    path: ../log
+  level:
+    root: off
+    com.example.common.LogUtils: info
